--- a/xtermjs/term.html
+++ b/xtermjs/term.html
@@ -1,3 +1,4 @@
 <!doctype html>
+<meta name="viewport" content="user-scalable=no, height=device-height, initial-scale=1.0">
 <div id="terminal"></div>
 <script src="bundle.js"></script>
