Fuck webpack, use parcel instead

--- a/app/xtermjs/term.html
+++ b/app/xtermjs/term.html
@@ -1,4 +1,4 @@
 <!doctype html>
 <meta name="viewport" content="user-scalable=no, height=device-height, initial-scale=1.0">
 <div id="terminal"></div>
-<script src="bundle.js"></script>
+<script src="term.js"></script>
