Prevent double tap zooming webview

--- a/app/xtermjs/term.html
+++ b/app/xtermjs/term.html
@@ -1,5 +1,5 @@
 <!doctype html>
 <meta charset="utf-8">
-<meta name="viewport" content="user-scalable=no, height=device-height, initial-scale=1.0">
+<meta name="viewport" content="height=device-height, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 <div id="terminal"></div>
 <script src="term.js"></script>
