Switch to hterm
xterm.js can't support selection sanely. I originally thought hterm was
kind of abandoned, but it turns out thousands of Googlers rely on it.
So now I can live at head, and have a place to send patches.

--- a/app/terminal/term.html
+++ b/app/terminal/term.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta charset="utf-8">
 <meta name="viewport" content="height=device-height, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+<link rel="stylesheet" href="term.css">
 <div id="terminal"></div>
-<style id="style"></style>
+<script src="hterm_all.js"></script>
 <script src="term.js"></script>
